--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.6.0
 Django==4.1.5
+django-extensions==3.2.1
+postgres==4.0
 psycopg2-binary==2.9.5
+psycopg2-pool==1.1
 python-decouple==3.7
 sqlparse==0.4.3
 tzdata==2022.7
